--- a/popup/css/popup_style.css
+++ b/popup/css/popup_style.css
@@ -1,48 +1,168 @@
-body {
-    font-family: 'Microsoft Yahei';
+* {
     margin: 0px;
     padding: 0px;
 }
+body {
+    font-family: 'Microsoft Yahei';
+}
 p {
     margin: 0px;
-    padding: 5px 10px;
+    padding: 0px;
     font-size: 100%;
 }
-.mainContent {
+.flex-box {
+    display: -webkit-flex; /*在webkit内核的浏览器上使用要加前缀*/
+    display: flex;
+}
+#mainContent {
     width: 450px;
     min-height: 600px;
     background-color: white;
 }
-.header {
+.header-box {
     width: 100%;
     height: 50px;
-    border-bottom-style: solid;
-    border-bottom-color: #f1f1f1;
-    border-bottom-width: 1px;
-    background-color: #fafafa;
+    border-bottom: 1px solid #f1f1f1;
+    flex-direction: row;
 }
-.header-logo {
-    width: 80%;
-    height: 100%;
+#header-top {
+    background-color: #1e1e1e;
+}
+#header-top-logo {
+    width: 85%;
+    /* height: 100%; */
     /* background-color: black; */
-    display: inline-block;
+    /* display: inline-block; */
     vertical-align: top;
 }
-.logo-font {
+.headline-font {
     padding: 0px;
     padding-left: 15px;
-    font-size: 120%;
+    /* font-size: 120%; */
     /* text-align: center; */
     line-height:50px;
-    color: #737373;
 }
-.top-header-tool {
+/* .logo-font:hover {
+    color: #1e1e1e;
+} */
+#header-top-tool {
     width: 15%;
-    height: 100%;
-    display: inline-block;
+    /* height: 100%; */
+    /* display: inline-block; */
     /* background-color: black; */
     vertical-align: top;
+    justify-content: center;
+    align-items: center;
 }
 .icon-tool {
-    
+    color: #f1f1f1;
+    text-align: center;
+    line-height: 50px;
+    font-size: 1.4em;
+}
+.icon-tool:hover {
+    color: #cfd1d3;
+}
+#header-about {
+    /* padding: 0px 15px 0px 15px; */
+    background-color: #fafafa;
+}
+.header-about-right {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#search-container {
+    height: 35px;
+    border-bottom: 1px solid #f1f1f1;
+    justify-content: center;
+    align-items: center;
+}
+.search-input {
+    width: 90%;
+    border: 1px solid #f1f1f1;
+    font-size: 0.8em;
+    padding: 3px 10px;
+    border-radius: 18px;
+}
+.icon-search {
+    color:#ccc;
+    position: relative;
+    right: 25px;
+    z-index:1;
+}
+.icon-search:hover {
+    color: #1e1e1e;
+}
+.todoList-container {
+    height: 425px;
+    /* background-color: #1e1e1e; */
+    border-bottom: 1px solid #f1f1f1;
+    overflow-y:auto; overflow-x:auto;
+    flex-direction: column;
+}
+.todoList-li {
+    /* margin-top: 10px; */
+    min-height: 45px;
+    border-bottom: 1px solid #f1f1f1;
+    padding: 5px 15px;
+}
+.todoList-li:hover {
+    background-color: #f1f1f1;
+}
+.todoList-li-content {
+    flex-direction: column;
+    /* padding: 0px 15px; */
+    word-wrap:break-word;
+    width: 85%;
+}
+.todoList-li-content-text {
+    word-wrap:break-word;
+}
+.todoList-li-content-time {
+    margin-top: 3px;
+}
+.todoList-li-content-time-p {
+    font-size: 0.6em;
+    padding-right: 15px;
+    color: #369bff;
+    /* border-left: 1px solid #f1f1f1; */
+}
+.todoList-li-operation {
+    width: 15%;
+    /* background-color: #1e1e1e */
+    justify-content: flex-end;
+    align-items: center;
+}
+#footer {
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top:565px;
+    width: 100%;
+}
+#footer:hover {
+    background-color:#f1f1f1;
+}
+/* .bt {
+    height: 38px;
+    background-color: #1e1e1e
+}
+.bt-out {
+    width: 30%;
+}
+.bt-inside {
+    width: 30%;
+} */
+.icon-plus {
+    padding: 10px;
+}
+.icon-operation {
+    /* text-align: left; */
+    line-height: 45px;
+    font-size: 1.2em;
+    color:#bfbfbf;
+}
+.icon-operation:hover {
+    color:#1d1d1d;
 }
