--- a/popup/css/popup_style.css
+++ b/popup/css/popup_style.css
@@ -193,7 +193,7 @@ p {
 .icon-operation {
     /* text-align: left; */
     line-height: 100%;
-    font-size: 1.2em;
+    font-size: 0.9em;
     color:#bfbfbf;
 }
 .icon-operation:hover {
@@ -208,7 +208,7 @@ p {
     padding: 0 15%;
     justify-content:center;
 }
-#todoTextarea {
+#todoTextarea, #popup-todoTextarea{
     width: 100%;
     height: 250px;
 }
@@ -276,4 +276,25 @@ p {
     border-left: 1px solid #f1f1f1;
     color:#5499C7
 }
-
+#popup-editToDoItem {
+    min-width: 350px;
+    min-height: 450px;
+    /* padding: 20px; */
+    flex-direction: row;
+}
+.popup-center-content {
+    width:80%;
+    padding: 0% 10%;
+    margin-top:5%; 
+    justify-content:center;
+}
+#popup-save-bt-container {
+    width: 100%;
+}
+#popup-save-bt {
+    width: 100%;
+    background-color: #5499C7;
+    border: 0px solid #5499C7;
+    margin: 10px 0px;
+    color: #fff;
+}
